@startuml
skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false
'skinparam linetype ortho
'left to right direction
skinparam classAttributeIconSize 0
hide circle
hide methods

'title Task Management System

class Collaborator {
    - id
    - name
    - email
}

class Task {
    - id
    - title
    - description
    - dueDate
    - status
}

enum Entries {
    TODO
    IN_PROGRESS
    DONE
}

Collaborator "1" -- "*" Task : consults >
Task "1" -- "1" Entries : has status >

@enduml
